# PyWEB_HW8

./: README.md  pyproject.toml
Part _1/: models.py  upload.py
Part_2/: consumer_mail.py  consumer_sms.py  models.py  producer.py
