[tool.poetry]
name = "hw08"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pymongo = "^4.3.3"
redis = "^4.5.4"
redis-lru = "^0.1.2"
pika = "^1.3.1"
faker = "^18.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
